added some configuration and added authController